src/test/resources/examples/invalid_cases/MoreLocalVariables.queen
public final implementation MoreLocalVariables of LocalVariables {

    @Override
    public void localVariables() {
        int x = 1, y = 2, z = 3;
        int m;
        int n, p;

        for(int i=0, j=0; i<10; i++,j++) {
            System.out.println("For-init multiple variables are allowed!");
            System.out.println("i == " + i);
            System.out.println("j == " + j);
        }
    }

}